w Week 3 and 4 assignment.
