# routes/project.js
@@ -1,0 +1,17 @@
+const express = require('express');
+const router = express.Router();
+
+const projectController = require('../controllers/projectController');
+
+router.get('/', projectController.getAllProject);
+
+router.get('/:id', projectController.getProjectById);
+
+// Week 3 assignment starts here.
+router.post('/', projectController.createProject);
+
+router.put('/:id', projectController.updateProject);
+
+router.delete('/:id', projectController.deleteProject);
+
+module.exports = router;
